--- a/letter.html
+++ b/letter.html
@@ -39,7 +39,7 @@
       <div class="imgBox">
         <img src="asset/letter.png" >
     
-        <video id="myVideo" controls autoplay></video>
+        <video src="" id="myVideo" controls autoplay type="video/mp4" ></video>
        
       </div>
       <div class="details">
@@ -87,6 +87,7 @@
       start();
       stop();
   </script>
+  <script src="https://apis.google.com/js/api.js"></script>
   <script src="confetti.js"></script>
   <script src="main.js"></script>
   <script src="script.js"></script>
