--- a/letter.html
+++ b/letter.html
@@ -22,8 +22,8 @@
         <form id="myForm">
             <h2 >Hello! 👋👋👋</h2>
             <br>
-            <label for="name"> Nhập tên vào đây nha :</label> <br> <br> 
-            <input class="input-text" type="text" id="name" name="name" placeholder="Nhập tên của bạn" >
+            <label for="name"> Nhập chữ cái đầu của Họ :</label> <br> <br> 
+            <input class="input-text" type="text" id="name" name="name" placeholder="Nhập chữ cái đầu Họ của bạn ^^" >
             <div class="autocom-box">
               <!-- here list are inserted from javascript -->
             </div>
