--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <div id="nav">
-            <h3><b>CYBER</b>FICTION*</h3>
+            <h3><b>MEGA</b>GRAM*</h3>
          
             <a href="letter.html" class="button">Invidation Letter</a>
        
